<resources>
    <string name="app_name">Quotes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string-array name="nav_item_activity_titles">
        <item>Gallery</item>
        <item>Favourite</item>
        <item>Downloads</item>
    </string-array>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_favourite">Favourite</string>
    <string name="nav_download">Downloads</string>
    <string name="nav_share">Share this app</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <string name="btn_download">Download</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_recent_imageview">RecentImageviewActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
