<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_image_black_24dp"
            android:title="@string/nav_gallery"/>
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_favorite_border_black_24dp"
            android:title="@string/nav_favourite"/>

        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/nav_download"/>



    </group>

    <item android:title="Others">

        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/nav_share"/>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_settings"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/nav_about"/>
        </menu>
    </item>
</menu>